<resources>
    <string name="app_name">SneakerApp</string>
    <string name="no_result_found">No results found</string>
    <string name="rs_symbol">₹</string>
    <string name="rs_2000">₹ 2000</string>
    <string name="size">Size</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="color">Color</string>
    <string name="price">Price:</string>
    <string name="checkout">Checkout</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="cart">cart</string>
    <string name="sneaker_ship">Sneaker Ship</string>
    <string name="order_details">Order Details</string>
    <string name="total">Total</string>
    <string name="subtotal">SubTotal: </string>
    <string name="taxes_and_charges">Taxes and Charges: </string>
    <string name="year">Year of release: </string>
</resources>