<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        />


    <ImageView
        android:id="@+id/sneaker_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        android:layout_marginTop="24dp"
        android:src="@drawable/nike"
        android:visibility="gone"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sneaker_image" />


    <LinearLayout
        android:id="@+id/dots_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/view_pager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="10dp"
            android:layout_height="10dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="5dp"
            app:cardElevation="0dp">


            <ImageView
                android:id="@+id/iv1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="10dp"
            android:layout_height="10dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="5dp"
            app:cardElevation="0dp">


            <ImageView
                android:id="@+id/iv2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="10dp"
            android:layout_height="10dp"
            app:cardCornerRadius="5dp"
            android:layout_margin="5dp"
            app:cardElevation="0dp">


            <ImageView
                android:id="@+id/iv3"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dots_layout"
        app:cardCornerRadius="16dp"

        app:cardElevation="8dp"
        android:layout_marginTop="12dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="26dp"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nike Air Jordan"
                android:gravity="center"
                android:textSize="28sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Subtitle"
                android:gravity="center"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Year of release: "
                android:gravity="center"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="24dp"
                android:gravity="center_horizontal"
                android:layout_marginTop="24dp"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/seven_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_7"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:background="@drawable/orange_size_bg"
                    android:padding="8dp"
                    android:layout_marginStart="12dp"
                    />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/eight_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_8"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:background="@drawable/orange_size_bg"
                    android:padding="8dp"
                    android:layout_marginStart="12dp"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/nine_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_9"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:background="@drawable/orange_size_bg"
                    android:padding="8dp"
                    android:layout_marginStart="12dp"
                    />




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/orange_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:background="@drawable/orange_bg"
                    android:textColor="@color/white"
                    android:layout_marginEnd="6dp"

                    android:padding="8dp"
                    />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/blue_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:background="@drawable/blue_bg"
                    android:textColor="@color/white"
                    android:padding="8dp"
                    android:layout_marginEnd="6dp"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/black_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:background="@drawable/black_bg"
                    android:textColor="@color/white"
                    android:padding="8dp"
                    />




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:layout_marginHorizontal="24dp"
                    android:textStyle="bold"

                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rs_2000"
                    android:textColor="@color/orange"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/add_to_cart_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_cart"
                    android:background="@drawable/add_to_cart_bg"
                    android:textColor="@color/white"
                    android:padding="16dp"
                    android:textStyle="bold"
                    android:layout_marginStart="100dp"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>